--- a/index44.html
+++ b/index44.html
@@ -42,7 +42,7 @@
 			transform: translateX(-50%);
 			width: calc(var(--game-width) + 8px);
 			height: 15vh;
-			background-image: url('pic/millimeter_paper.jpg'); /* Фон тачпада */
+			background-image: url('pic/millimeter_paper.jpg'), linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)); /* Fallback */
 			background-size: cover; /* Растягиваем изображение на всю область */
 			background-position: center; /* Центрируем изображение */
 			border-radius: 10px;
