--- a/index44.html
+++ b/index44.html
@@ -35,6 +35,17 @@
 			padding: 0; /* Убираем padding */
 		}
 		
+		/* Добавляем анимацию glow */
+		@keyframes glow {
+			0% {
+				background-color: rgba(255, 255, 255, 0.1); /* Начальный цвет (слабый) */
+			}
+			100% {
+				background-color: rgba(255, 255, 255, 0.3); /* Конечный цвет (немного ярче) */
+			}
+		}
+
+		/* Применяем анимацию к тачпаду */
 		#touchpad {
 			position: fixed;
 			bottom: -10px;
@@ -42,24 +53,12 @@
 			transform: translateX(-50%);
 			width: calc(var(--game-width) + 8px);
 			height: 15vh;
-			background-image: url('pic/millimeter_paper.jpg'), linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)); /* Fallback */
-			background-size: cover; /* Растягиваем изображение на всю область */
-			background-position: center; /* Центрируем изображение */
+			background-color: rgba(255, 255, 255, 0.1);
 			border-radius: 10px;
 			z-index: 1000;
 			touch-action: none;
-			box-shadow: 0 0 20px rgba(255, 255, 255, 0.3); /* Слабая подсветка */
-			animation: glow 2s infinite alternate; /* Анимация подсветки */
+			animation: glow 2s infinite alternate; /* Анимация свечения */
 		}
-		
-		@keyframes glow {
-			from {
-				box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
-			}
-			to {
-				box-shadow: 0 0 30px rgba(255, 255, 255, 0.5); /* Усиление свечения */
-			}
-		}		
 		
         /* Скрываем touchpad на ПК */
         body.pc #touchpad {
