--- a/index44.html
+++ b/index44.html
@@ -35,17 +35,19 @@
 			padding: 0; /* Убираем padding */
 		}
 		
-		/* Добавляем анимацию glow */
+		/* Анимация glow */
 		@keyframes glow {
 			0% {
-				background-color: rgba(255, 255, 255, 0.1); /* Начальный цвет (слабый) */
+				background-color: rgba(255, 255, 255, 0.2); /* Начальный цвет */
+				box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* Слабая тень */
 			}
 			100% {
-				background-color: rgba(255, 255, 255, 0.3); /* Конечный цвет (немного ярче) */
+				background-color: rgba(255, 255, 255, 0.4); /* Конечный цвет */
+				box-shadow: 0 0 20px rgba(255, 255, 255, 0.4); /* Более яркая тень */
 			}
 		}
 
-		/* Применяем анимацию к тачпаду */
+		/* Стили для тачпада */
 		#touchpad {
 			position: fixed;
 			bottom: -10px;
@@ -53,11 +55,13 @@
 			transform: translateX(-50%);
 			width: calc(var(--game-width) + 8px);
 			height: 15vh;
-			background-color: rgba(255, 255, 255, 0.1);
+			background-color: rgba(255, 255, 255, 0.2); /* Более яркий фон */
 			border-radius: 10px;
 			z-index: 1000;
 			touch-action: none;
 			animation: glow 2s infinite alternate; /* Анимация свечения */
+			box-shadow: none; /* Убираем тень, если она есть */
+			border: none; /* Убираем границу, если она есть */
 		}
 		
         /* Скрываем touchpad на ПК */
