--- a/index44.html
+++ b/index44.html
@@ -39,11 +39,11 @@
 		@keyframes glow {
 			0% {
 				background-color: rgba(255, 255, 255, 0.1); /* Начальный цвет */
-				box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* Слабая тень */
+				/* box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); */ /* Слабая тень */
 			}
 			100% {
 				background-color: rgba(255, 255, 255, 0.3); /* Конечный цвет */
-				box-shadow: 0 0 20px rgba(255, 255, 255, 0.4); /* Более яркая тень */
+				/* box-shadow: 0 0 20px rgba(255, 255, 255, 0.4); */ /* Более яркая тень */
 			}
 		}
 
