--- a/index44.html
+++ b/index44.html
@@ -256,6 +256,11 @@
 			background-color: rgba(255, 255, 255, 0.0);
 			z-index: 100;
 		}
+		
+		/* Для ПК добавляем дополнительный отступ сверху */
+		body.pc #iconsPanel {
+			top: 30px; /* 10px (отступ индикаторов) + 20px (отступ холста) */
+		}
 
 		/* Иконки на панели */
 		#iconsPanel img {
