--- a/index44.html
+++ b/index44.html
@@ -221,7 +221,7 @@
 		#healthBar {
 			position: absolute;
 			top: 10px;
-			left: 10px;
+			left: 5px;
 			width: 100px; /* Фиксированная ширина для ПК */
 			height: 24px;
 			background-color: rgba(255, 0, 0, 0.3);
@@ -233,7 +233,7 @@
 		#ammoBar {
 			position: absolute;
 			top: 10px;
-			right: 10px;
+			right: 5px;
 			width: 100px; /* Фиксированная ширина для ПК */
 			height: 24px;
 			background-color: rgba(0, 0, 0, 0.3);
@@ -1917,7 +1917,7 @@
 					const availableWidth = ammoBarLeft - healthBarRight;
 
 					// Добавляем отступы между индикаторами и панелью иконок
-					const padding = 20; // Отступ в 20 пикселей с каждой стороны
+					const padding = 30; // Увеличиваем отступ до 30 пикселей с каждой стороны
 					const panelWidth = availableWidth + 2 * padding; // Увеличиваем ширину панели на отступы
 
 					// Устанавливаем ширину панели иконок
