--- a/index44.html
+++ b/index44.html
@@ -255,6 +255,7 @@
 			gap: 5px; /* Уменьшаем отступы между иконками */
 			background-color: rgba(255, 255, 255, 0.0);
 			z-index: 100;
+			padding: 0 20px; /* Добавляем отступы по бокам */
 		}
 		
 		/* Для ПК добавляем дополнительный отступ сверху */
