--- a/index44.html
+++ b/index44.html
@@ -270,36 +270,28 @@
 		}
 
 		#iconsPanel.hidden {
-			display: none; /* Скрывает панель */
+			display: none; /* Скрывает панель */	
+			
 
-		#joystickHint {
-		  position: absolute;
-		  width: 50px;
-		  height: 50px;
-		  background-color: rgba(255, 255, 255, 0.3); /* Полупрозрачный белый */
-		  border-radius: 50%; /* Круглая форма */
-		  border: 2px solid rgba(255, 255, 255, 0.5); /* Белая рамка */
-		  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Свечение */
-		  opacity: 0; /* Начальная прозрачность */
-		  transition: opacity 0.3s ease, transform 0.2s ease; /* Плавные переходы */
-		  pointer-events: none; /* Элемент не должен блокировать касания */
-		  animation: pulse 2s infinite; /* Анимация мигания */
-		}
+        #virtualJoystick {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            animation: glow 2s infinite alternate;
+            display: none; /* Скрываем по умолчанию */
+        }
 
-		@keyframes pulse {
-		  0% {
-			transform: scale(1);
-			opacity: 0.5;
-		  }
-		  50% {
-			transform: scale(1.1);
-			opacity: 0.8;
-		  }
-		  100% {
-			transform: scale(1);
-			opacity: 0.5;
-		  }
-		}			
+        @keyframes glow {
+            0% {
+                opacity: 0.3;
+            }
+            100% {
+                opacity: 0.7;
+            }
+        }			
 		
     </style>
 </head>
@@ -335,9 +327,7 @@
 	</div>
 	
     <!-- Сенсорный ползунок -->
-	<div id="touchpad">
-	  <div id="joystickHint"></div> <!-- Добавьте эту строку -->
-	</div>
+    <div id="touchpad"></div>
 
     <!-- Модальное окно для боевой сводки -->
     <div id="scoreModal">
@@ -409,6 +399,10 @@
 				<li>Используйте бонусы: аптечки, ящики со снарядами и "Орешник" помогут вам выжить в трудных ситуациях.</li>
 			</ul>
 		</div>
+    </div>
+	
+    <div id="touchpad">
+        <div id="virtualJoystick"></div>
     </div>
 
     <!-- Звуковые эффекты (только OGG) -->
@@ -585,49 +579,6 @@
 		let isInfantryStopped = false; // Остановлена ли пехота
 		
 		let isGameOver = false; // Флаг для отслеживания состояния игры
-		
-		// Элементы джойстика и тачпада
-		const touchpad = document.getElementById('touchpad');
-		const joystickHint = document.getElementById('joystickHint');
-
-		let isTouching = false;
-
-		// Показываем джойстик при касании
-		touchpad.addEventListener('touchstart', (e) => {
-		  isTouching = true;
-		  joystickHint.style.opacity = '0.5'; // Показываем элемент
-		  updateJoystickPosition(e.touches[0]); // Обновляем позицию
-		});
-
-		// Перемещаем джойстик за пальцем
-		touchpad.addEventListener('touchmove', (e) => {
-		  if (isTouching) {
-			updateJoystickPosition(e.touches[0]);
-		  }
-		});
-
-		// Скрываем джойстик при отпускании
-		touchpad.addEventListener('touchend', () => {
-		  isTouching = false;
-		  joystickHint.style.opacity = '0'; // Скрываем элемент
-		});
-
-		// Функция для обновления позиции джойстика
-		function updateJoystickPosition(touch) {
-		  const touchpadRect = touchpad.getBoundingClientRect();
-		  const touchX = touch.clientX - touchpadRect.left; // Позиция касания относительно тачпада
-		  const touchY = touch.clientY - touchpadRect.top;
-
-		  // Ограничиваем позицию джойстика в пределах тачпада
-		  const joystickSize = 50; // Размер джойстика
-		  const maxX = touchpadRect.width - joystickSize;
-		  const maxY = touchpadRect.height - joystickSize;
-
-		  const x = Math.max(0, Math.min(touchX - joystickSize / 2, maxX));
-		  const y = Math.max(0, Math.min(touchY - joystickSize / 2, maxY));
-
-		  joystickHint.style.transform = `translate(${x}px, ${y}px)`; // Перемещаем джойстик
-		}		
 		
 		function playSound(soundId) {
 			const sound = document.getElementById(soundId);
@@ -896,11 +847,11 @@
         }
 
         // Логика для сенсорного ползунка
-        // const touchpad = document.getElementById('touchpad');
+        const touchpad = document.getElementById('touchpad');
         // let isTouching = false;
-        // let touchStartX = 0;
-        // let playerStartX = 0;
-        // let isTap = false;
+        let touchStartX = 0;
+        let playerStartX = 0;
+        let isTap = false;
 
         touchpad.addEventListener('touchstart', (e) => {
             isTouching = true;
@@ -2127,9 +2078,39 @@
             startY = currentY; // Обновляем начальную позицию
         });
 		
-		console.log('Canvas top offset:', canvas.offsetTop);
-		console.log('Canvas padding top:', window.getComputedStyle(canvas).paddingTop);
 
+		
+        const virtualJoystick = document.getElementById('virtualJoystick');
+        let isTouching = false;
+
+        touchpad.addEventListener('touchstart', (e) => {
+            isTouching = true;
+            const touchpadRect = touchpad.getBoundingClientRect();
+            const touchX = e.touches[0].clientX - touchpadRect.left;
+            const touchY = e.touches[0].clientY - touchpadRect.top;
+
+            // Показываем виртуальный джойстик и устанавливаем его позицию
+            virtualJoystick.style.display = 'block';
+            virtualJoystick.style.left = `${touchX - 25}px`; // Центрируем по X
+            virtualJoystick.style.top = `${touchY - 25}px`; // Центрируем по Y
+        });
+
+        touchpad.addEventListener('touchmove', (e) => {
+            if (!isTouching) return;
+
+            const touchpadRect = touchpad.getBoundingClientRect();
+            const touchX = e.touches[0].clientX - touchpadRect.left;
+            const touchY = e.touches[0].clientY - touchpadRect.top;
+
+            // Обновляем позицию виртуального джойстика
+            virtualJoystick.style.left = `${touchX - 25}px`; // Центрируем по X
+            virtualJoystick.style.top = `${touchY - 25}px`; // Центрируем по Y
+        });
+
+        touchpad.addEventListener('touchend', () => {
+            isTouching = false;
+            virtualJoystick.style.display = 'none'; // Скрываем виртуальный джойстик
+        });
     </script>
 </body>
 </html>
