--- a/index44.html
+++ b/index44.html
@@ -39,11 +39,11 @@
 		@keyframes glow {
 			0% {
 				background-color: rgba(255, 255, 255, 0.1); /* Начальный цвет */
-				box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* Слабая тень */
+				box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Слабая тень */
 			}
 			100% {
-				background-color: rgba(255, 255, 255, 0.2); /* Конечный цвет */
-				box-shadow: 0 0 20px rgba(255, 255, 255, 0.4); /* Более яркая тень */
+				background-color: rgba(255, 255, 255, 0.1); /* Конечный цвет */
+				box-shadow: 0 0 20px rgba(255, 255, 255, 0.1); /* Более яркая тень */
 			}
 		}
 
@@ -281,6 +281,7 @@
             border-radius: 50%;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
             animation: glow 2s infinite alternate;
+			z-index: 1002;
             display: none; /* Скрываем по умолчанию */
         }
 
