--- a/index44.html
+++ b/index44.html
@@ -39,11 +39,11 @@
 		@keyframes glow {
 			0% {
 				background-color: rgba(255, 255, 255, 0.1); /* Начальный цвет */
-				box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Слабая тень */
+				box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* Слабая тень */
 			}
 			100% {
-				background-color: rgba(255, 255, 255, 0.1); /* Конечный цвет */
-				box-shadow: 0 0 20px rgba(255, 255, 255, 0.1); /* Более яркая тень */
+				background-color: rgba(255, 255, 255, 0.2); /* Конечный цвет */
+				box-shadow: 0 0 20px rgba(255, 255, 255, 0.4); /* Более яркая тень */
 			}
 		}
 
@@ -270,29 +270,7 @@
 		}
 
 		#iconsPanel.hidden {
-			display: none; /* Скрывает панель */	
-			
-
-        #virtualJoystick {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            background-color: rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            animation: glow 2s infinite alternate;
-			z-index: 1002;
-            display: none; /* Скрываем по умолчанию */
-        }
-
-        @keyframes glow {
-            0% {
-                opacity: 0.3;
-            }
-            100% {
-                opacity: 0.7;
-            }
-        }			
+			display: none; /* Скрывает панель */		
 		
     </style>
 </head>
@@ -400,10 +378,6 @@
 				<li>Используйте бонусы: аптечки, ящики со снарядами и "Орешник" помогут вам выжить в трудных ситуациях.</li>
 			</ul>
 		</div>
-    </div>
-	
-    <div id="touchpad">
-        <div id="virtualJoystick"></div>
     </div>
 
     <!-- Звуковые эффекты (только OGG) -->
@@ -849,7 +823,7 @@
 
         // Логика для сенсорного ползунка
         const touchpad = document.getElementById('touchpad');
-        // let isTouching = false;
+        let isTouching = false;
         let touchStartX = 0;
         let playerStartX = 0;
         let isTap = false;
@@ -2079,39 +2053,9 @@
             startY = currentY; // Обновляем начальную позицию
         });
 		
+		console.log('Canvas top offset:', canvas.offsetTop);
+		console.log('Canvas padding top:', window.getComputedStyle(canvas).paddingTop);
 
-		
-        const virtualJoystick = document.getElementById('virtualJoystick');
-        let isTouching = false;
-
-        touchpad.addEventListener('touchstart', (e) => {
-            isTouching = true;
-            const touchpadRect = touchpad.getBoundingClientRect();
-            const touchX = e.touches[0].clientX - touchpadRect.left;
-            const touchY = e.touches[0].clientY - touchpadRect.top;
-
-            // Показываем виртуальный джойстик и устанавливаем его позицию
-            virtualJoystick.style.display = 'block';
-            virtualJoystick.style.left = `${touchX - 25}px`; // Центрируем по X
-            virtualJoystick.style.top = `${touchY - 25}px`; // Центрируем по Y
-        });
-
-        touchpad.addEventListener('touchmove', (e) => {
-            if (!isTouching) return;
-
-            const touchpadRect = touchpad.getBoundingClientRect();
-            const touchX = e.touches[0].clientX - touchpadRect.left;
-            const touchY = e.touches[0].clientY - touchpadRect.top;
-
-            // Обновляем позицию виртуального джойстика
-            virtualJoystick.style.left = `${touchX - 25}px`; // Центрируем по X
-            virtualJoystick.style.top = `${touchY - 25}px`; // Центрируем по Y
-        });
-
-        touchpad.addEventListener('touchend', () => {
-            isTouching = false;
-            virtualJoystick.style.display = 'none'; // Скрываем виртуальный джойстик
-        });
     </script>
 </body>
 </html>
